css/style.css
body{
    background-color: rgb(59, 46, 85);
    opacity: 0.9;
}
.header{
    display: flex;
    justify-content: space-between;

}
h1{
    padding: 20px;
    color: white;
}
nav,h1{
    padding: 15px;
}
nav>ul>li{
    display: inline-block;
    padding: 15px;
    padding-top: 5px;
    padding-bottom: 5px;
    text-transform: uppercase;
    background-color: rgb(45, 32, 59);
}
nav>ul>li>a{
    color:white;
}
nav>ul>li:hover{
    background-color:blue;
    color: white;
}
nav>ul>li>a:hover{
    color: white;
}
/* style the image and name section */
.image-name{   
    color: white;
    margin-left: 30%;
}
.image-name>img{
    margin-top: -7.5%;
}
.image-name>p{
    margin-top: 6%;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;

}
/* ABOUT ME */
.about>h1{
    text-align: center;
    color: black;
}
.about{
    margin-top: 5%;
    color: white;
    font-size: larger;
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
}
.background, .hobbies, .skills{    
    border:solid 2px white;
    padding: 15px;
    margin: 5px;
}
/* PROJECTS */
.projects{
    color: white;
    font-family: fantasy;
    font-size: larger;        
}
.projects>h1{
    text-align: center;
    padding: 10px;
    color: black;
}
.col-md-4>p>a{
    color: cyan;
}
.col-md-4>p>a:hover{
    background-color: white;
    color: magenta;
}
.col-md-4:hover{
    box-shadow: 5px 5px 5px cyan;
    text-transform: uppercase;
    background-color: blue;
    color: black;
    font-weight: 25px;
}
#studio, #burger{
    border-radius: 50%;
}
/* CONTACT */
.contact{
    color:white;     
} 
.contact>h1{
    color: black;
    text-align: center;
}
.contact>p{
    text-align: center;
}
.reachme{
    margin-left: 45%;
}
.reachme>p>a{
    color: cyan;
}

